syntax = "proto3";
package hyperlane.core.v1;

option go_package = "github.com/troykessler/hyperlane-cosmos/x/core/types";

import "hyperlane/core/v1/types.proto";
import "hyperlane/core/interchain_security/v1/genesis.proto";
import "hyperlane/core/post_dispatch/v1/genesis.proto";

// GenesisState is the state that must be provided at genesis.
message GenesisState {
  // ism_genesis
  hyperlane.core.interchain_security.v1.GenesisState ism_genesis = 1;

  // post_dispatch_genesis
  hyperlane.core.post_dispatch.v1.GenesisState post_dispatch_genesis = 2;

  repeated Mailbox mailboxes = 3;
  repeated MailboxMessage messages = 4;

  uint64 ism_sequence = 5;
  uint64 post_dispatch_sequence = 6;
  uint64 app_sequence = 7;
}

// Mailbox message for genesis state
message MailboxMessage {
  uint64 mailbox_id = 1;
  bytes message_id = 2;
}